<resources>
    <string name="app_name">异界群敌</string>
    <string name="picture">picture</string>
    <string name="picture_zip">picture.zip</string>
    <string name="thumbnail">thumbnail</string>

    <string name="not_applicable">(N/A)</string>
    <string name="hyphen">-</string>
    <string name="slash">/</string>
    <string name="empty">""</string>
    <string name="series">系列</string>
    <string name="number">数值</string>
    <string name="value">编号</string>
    <string name="cost_not_applicable">-1</string>
    <string name="power_not_applicable">-1</string>

    <string name="TypeZx">Z/X</string>
    <string name="TypePlayer">玩家</string>
    <string name="TypeEvent">事件</string>
    <string name="TypeZxEx">Z/X EX</string>
    <string name="SignIg">点燃</string>
    <string name="AbilityLife">【常】生命恢复</string>
    <string name="AbilityVoid">【常】虚空使者</string>
    <string name="AbilityStart">【常】起始卡</string>
    <string name="ug_area">非点燃区</string>
    <string name="ex_area">额外区</string>
    <string name="player_area">玩家卡</string>

    <!-- Operation -->
    <string name="add_succeed">添加->成功</string>
    <string name="delete_confirm">是否删除</string>
    <string name="delete_succeed">删除->成功</string>
    <string name="delete_failed">删除->失败</string>
    <string name="update_succeed">更新->成功</string>
    <string name="update_failed">更新->失败</string>
    <string name="copy_succeed">复制->成功</string>
    <string name="copy_failed">复制->失败</string>
    <string name="save_succeed">保存->成功</string>
    <string name="save_failed">保存->失败</string>
    <string name="resources_repair_confirm">是否重置资源?</string>
    <string name="rename">更名</string>
    <string name="resave">另存</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>

    <!-- Extension -->
    <string name="deck_extension">.zx</string>
    <string name="image_extension">.jpg</string>
    <string name="zip_extension">.zip</string>

    <!-- Test -->
    <string name="test_cname">海洋服 莉洁尔</string>
    <string name="test_jname">オーシャンドレス リゲル</string>
    <string name="test_cost">3</string>
    <string name="test_power">5000</string>
    <string name="test_race">战斗服</string>
    <string name="test_camp">蓝</string>
    <string name="test_number">P17-035</string>
    <string name="test_type">Z/X</string>
    <string name="test_rare">PR</string>

    <!-- Base -->
    <string name="search">检索</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="waiting">请稍后&#8230;</string>
    <string name="back">返回</string>
    <string name="network_exception">无法连接到网络</string>
    <string name="service_exception">无法连接到服务器</string>

    <string name="card_not_found">没有查询到相关卡牌</string>
    <string name="exit_with_not_saved">卡组尚未保存,是否放弃本次编辑?</string>
    <string name="exit_with_not_permissions">权限不足,程序将在2s后关闭</string>
    <string name="database_is_copying">正在拷贝数据库&#x000A;</string>
    <string name="image_is_copying">正在拷贝图片资源&#x000A;</string>
    <string name="restrict_is_copying">正在拷贝制限卡表&#x000A;</string>
    <string name="image_is_unzipping">正在解压图片资源&#x000A;</string>
    <string name="location_hint">检测到应用安装于SD卡中,建议切换至内存,增加流畅体验</string>

    <!-- Main -->
    <string name="main_search_hint">请输入关键字</string>
    <string name="exit_with_more_back">再按一次退出应用</string>
    <string name="main_condition_search">高级检索</string>
    <string name="main_adv_search">高级查询</string>
    <string name="main_setting">设置</string>
    <string name="main_deck_preview">卡组预览</string>

    <!-- AdvancedSearchActivity  -->
    <string name="advanced_search_about_title">高级检索</string>
    <string name="adv_search_key">字段</string>
    <string name="adv_search_type">种类</string>
    <string name="adv_search_camp">阵营</string>
    <string name="adv_search_race">种族</string>
    <string name="adv_search_rare">罕贵</string>
    <string name="adv_search_cost">费用</string>
    <string name="adv_search_power">力量</string>
    <string name="adv_search_pack">卡包</string>
    <string name="adv_search_sign">标记</string>
    <string name="adv_search_illust">画师</string>
    <string name="adv_search_restrict">限制:</string>
    <string name="adv_search_ability_type">基础分类</string>
    <string name="adv_search_ability_detail">扩展分类</string>

    <!-- CardPreviewActivity  -->
    <string name="card_preview_about_title">查询预览</string>

    <!-- CardDetailActivity -->
    <string name="card_detail_about_title">详细信息</string>

    <!-- DeckPreviewActivity -->
    <string name="deck_preview_about_title">卡组预览</string>
    <string name="deck_pre_main">卡组:</string>
    <string name="deck_pre_extra">额外:</string>
    <string name="deck_pre_complete">完成</string>
    <string name="deck_pre_not_complete">未完成</string>
    <string name="deck_pre_name">卡组名称</string>
    <string name="deck_pre_name_hint">请输入卡组名称</string>
    <string name="deck_pre_advanced_search">高级检索</string>
    <string name="deck_name_exits">卡组名称->已存在</string>

    <!-- DeckEditorActivity -->
    <string name="deck_editor_about_title">卡组编辑</string>
    <string name="deck_editor_save">保存</string>
    <string name="deck_editor_result_count">查询统计:</string>
    <string name="deck_editor_start_card">起始卡:</string>
    <string name="deck_editor_life_card">生命恢复:</string>
    <string name="deck_editor_void_card">虚空使者:</string>
    <string name="deck_editor_ig_area">点燃区</string>
    <string name="deck_editor_deck_confirm">确认</string>

    <!-- DeckConfirmActivity -->
    <string name="deck_confirm_about_title">卡组名称</string>

    <!-- SettingActivity -->
    <string name="setting_about_title">设置</string>
    <string name="setting_advanced">高级</string>
    <string name="setting_document">说明</string>
    <string name="setting_terminology">术语</string>
    <string name="setting_about">关于</string>

    <!-- TerminologyActivity -->
    <string name="terminology_about_title">术语</string>
    <string name="terminology_life">生命恢复</string>
    <string name="terminology_void">虚空使者</string>
    <string name="terminology_range">射程</string>
    <string name="terminology_insulate_wards">绝界</string>
    <string name="terminology_zero_optimize">零点优化</string>
    <string name="terminology_start">起始卡</string>
    <string name="terminology_evo">进化原力</string>
    <string name="terminology_life_des">这张卡从生命区登场时，你的生命在对手的生命以下的话，回复1点生命。</string>
    <string name="terminology_void_des">这张卡从生命区登场时，你的生命在对手的生命以下的话，选择场上1张Z/X，送去废弃区。</string>
    <string name="terminology_range_des">这张卡可以攻击X格远的方阵。</string>
    <string name="terminology_start_des">你可以将这张卡放置在玩家方阵上后再开始游戏。</string>
    <string name="terminology_evo_des">这张卡登场时，你可以选择你的废弃区中的1张卡，以正面表示放置到这张卡下方作为原力素材。</string>
    <string name="terminology_zero_optimize_des">你的资源区中的具备点燃标记的卡有X张以上的场合，以下的能力才有效。</string>
    <string name="terminology_insulate_wards_des">任何人都不能以卡片的效果选择这张卡。</string>

    <!-- AdvancedActivity -->
    <string name="advanced_about_title">高级</string>
    <string name="adv_preview_order">预览排序</string>
    <string name="adv_key_search">关键字</string>
    <string name="adv_deck_confirm_span_count">卡组确认行容量</string>
    <string name="adv_deck_editor_span_count">卡组编辑行容量</string>

    <!-- DocumentActivity -->
    <string name="document_about_title">说明</string>
    <string name="doc_key_search">关键字</string>
    <string name="doc_key_search_hint">支持多字段查询,字段以空格符号(A B)分开</string>
    <string name="doc_interval_search">区间查询</string>
    <string name="doc_interval_search_hint">支持区间查询,数值以连接符号(A-B)分开</string>
    <string name="doc_deck_operate">组卡操作</string>
    <string name="doc_deck_operate_hint">添加、删除卡片时请长按对应区域卡面&#x000A;信息显示卡面长按时进入详细信息界面</string>

    <!-- AboutActivity -->
    <string name="about_about_title">关于</string>
    <string name="about_version">版本号</string>
    <string name="about_resources_repair">资源修复</string>
    <string name="about_resources_repair_hint">数据库、卡牌图片重置</string>
    <string name="about_log">日志</string>
    <string name="about_thank">特别鸣谢</string>
    <string name="about_thank_name">异界群敌翻译小组</string>
    <string name="about_check_for_updates">检查更新</string>
    <string name="about_author">作者</string>
    <string name="about_author_name">八神火焰</string>
    <string name="about_location">应用位置</string>

    <!-- LanActivity -->
    <string name="lan_about_title">网络</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="build_host">建立主机</string>
    <string name="join">加入</string>
    <string name="temp_player_0">火焰</string>
    <string name="temp_player_1">祈海</string>
    <string name="temp_room_name">生与死</string>

    <!-- VersusRoomActivity -->
    <string name="game_setting_about_title">游戏设置</string>
    <string name="deck_select">卡组选择:</string>
    <string name="duel_start">开始决斗</string>

    <!-- DuelActivity -->
    <string name="duel">对战</string>

    <!-- UpdateService -->
    <string name="file_size">file_size</string>
    <string name="file_url">file_url</string>
    <string name="update_has_not_new">新版本->未检测到</string>
    <string name="update_title">版本更新</string>
    <string name="update_is_new">当前版本->最新</string>
    <string name="update_is_update">是否立即更新</string>

    <!-- VersusModeActivity -->
    <string name="versus_mode_about_title">对战模式</string>
    <string name="versus_personal">私人对战</string>
    <string name="ladder_tournament">天梯排名</string>
    <string name="versus_freedom">自由对战</string>

    <!-- PersonalVersusActivity -->
    <string name="create_room">建立房间</string>
    <string name="join_room">进入房间</string>

    <!-- VersusRoomActivity -->
    <string name="versus_setting_about_title">对战设置</string>
    <string name="room_id">房间ID</string>
    <string name="versus">VS</string>
    <string name="host">HOST</string>
    <string name="guest">GUEST</string>
    <string name="ready">准备</string>
    <string name="waiting_for_player">等待玩家</string>
</resources>
