<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/layout_match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.dab.zx.view.widget.AppBarView
        android:id="@+id/viewAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/terminology_about_title">
    </com.dab.zx.view.widget.AppBarView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_range_des"
                app:title_text="@string/terminology_range"/>

            <include layout="@layout/include_divider"/>

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_insulate_wards_des"
                app:title_text="@string/terminology_insulate_wards"/>

            <include layout="@layout/include_divider"/>

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_start_des"
                app:title_text="@string/terminology_start"/>

            <include layout="@layout/include_divider"/>

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_life_des"
                app:title_text="@string/terminology_life"/>

            <include layout="@layout/include_divider"/>

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_void_des"
                app:title_text="@string/terminology_void"/>

            <include layout="@layout/include_divider"/>

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_evo_des"
                app:title_text="@string/terminology_evo"/>

            <include layout="@layout/include_divider"/>

            <com.dab.zx.view.widget.MessageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_padding"
                app:message_text="@string/terminology_zero_optimize_des"
                app:title_text="@string/terminology_zero_optimize"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>