<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.view.widget.AppBarView
        android:id="@+id/viewAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/about_about_title"/>

    <com.zx.view.widget.MessageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:message_text="@string/about_author_name"
        app:title_text="@string/about_author"/>

    <include layout="@layout/include_divider"/>

    <com.zx.view.widget.MessageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:message_text="@string/about_thank_name"
        app:title_text="@string/about_thank"/>

    <include layout="@layout/include_divider"/>

    <com.zx.view.widget.MessageView
        android:id="@+id/msg_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:message_text="@string/about_version"
        app:title_text="@string/about_version"/>

    <include layout="@layout/include_divider"/>

    <com.zx.view.widget.MessageView
        android:id="@+id/msg_resources_repair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:message_text="@string/about_resources_repair_hint"
        app:title_text="@string/about_resources_repair"/>
</LinearLayout>