<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_advanced_search"
            android:title="@string/advanced_search_about_title" />
        <item
            android:id="@+id/nav_deck_preview"
            android:title="@string/deck_preview_about_title" />
        <item
            android:id="@+id/nav_duel"
            android:title="@string/duel" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting_about_title" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
