<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dab.zx.view.widget.AppBarView
        android:id="@+id/viewAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:title_text="@string/advanced_about_title"/>

    <com.dab.zx.view.widget.MessageView
        android:id="@+id/msg_key_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:title_text="@string/adv_key_search"/>

    <include layout="@layout/include_divider"/>

    <com.dab.zx.view.widget.MessageView
        android:id="@+id/msg_preview_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:title_text="@string/adv_preview_order"/>

    <include layout="@layout/include_divider"/>

    <com.dab.zx.view.widget.MessageView
        android:id="@+id/msg_deck_editor_span_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:title_text="@string/adv_deck_editor_span_count"/>

    <include layout="@layout/include_divider"/>

    <com.dab.zx.view.widget.MessageView
        android:id="@+id/msg_deck_confirm_span_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        app:title_text="@string/adv_deck_confirm_span_count"/>

</LinearLayout>