<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.view.widget.HeaderView
        android:id="@+id/view_header"
        xmlns:HeaderView="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        HeaderView:title_text="@string/setting_about_title">
    </com.zx.view.widget.HeaderView>

    <TextView
        android:id="@+id/tv_advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/advanced_about_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tv_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/document_about_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/about_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"/>

</LinearLayout>