<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/view_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.view.widget.HeaderView
        android:id="@+id/view_header"
        xmlns:HeaderView="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        HeaderView:title_text="@string/lan_about_title">
    </com.zx.view.widget.HeaderView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_bottom"
        android:layout_below="@+id/view_header"/>

    <LinearLayout
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|end">

        <EditText
            android:id="@+id/txt_nickname"
            style="@style/StyleEditText"
            android:layout_width="0dip"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/nickname_hint"/>

        <Button
            android:id="@+id/btn_build_host"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/build_host"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>