<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/viewItemContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_bg"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_margin">

            <include layout="@layout/item_card_image"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_cname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/test_cname"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_camp_result"
                    style="@style/layout_wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/test_camp"
                    android:textSize="@dimen/roboto_medium"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_race_result"
                    style="@style/layout_wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:text="@string/test_race"
                    android:textSize="@dimen/roboto_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_cost_result"
                    style="@style/layout_wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/test_cost"
                    android:textSize="@dimen/roboto_medium"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_power_result"
                    style="@style/layout_wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:text="@string/test_power"
                    android:textSize="@dimen/roboto_medium"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/include_divider"/>
</LinearLayout>