<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/view_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/result_card_margin"
    app:cardElevation="5dp">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/view_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_room_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="C1001"/>

            <TextView
                android:id="@+id/tv_room_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="决斗中"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/view_start"
            android:layout_toLeftOf="@+id/view_end"
            android:layout_toRightOf="@+id/view_start"
            android:layout_toStartOf="@+id/view_end"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_room_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/temp_room_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_player_type_0"
                    style="@style/layout_weight_height_wrap"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/temp_player_0"/>

                <TextView
                    android:id="@+id/tv_player_type_1"
                    style="@style/layout_weight_height_wrap"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/temp_player_1"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/btn_join"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_blue"
                android:text="@string/join"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>